[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Screens/UIPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Game.gd" type="Script" id=3]
[ext_resource path="res://src/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://src/Screens/Pause.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Screens/GameOver.tscn" type="PackedScene" id=6]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="ScreenLayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 110

[node name="Pause" parent="ScreenLayer" instance=ExtResource( 5 )]
visible = false

[node name="GameOver" parent="ScreenLayer" instance=ExtResource( 6 )]
visible = false

[node name="UserInterface" type="CanvasLayer" parent="."]
layer = 100

[node name="UIPlayer" parent="UserInterface" instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 225, 400 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 224, 304 )
current = true
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Camera2D"]
wait_time = 0.5
one_shot = true
